--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,18 +1,33 @@
-{% extends 'core/base.html' %}
+{% load last_message %}
 
-{% block content %}
+<style>
+    .profile-image {
+        height: 30px;
+        width: 30px;
+    }
+</style>
 
-<div class="row">
-  <div class="col-lg-8 col-md-10 col-sm-12 mx-auto shadow chat-box rounded">
-    <div class="row">
-      <div class="col-lg-4 ">
-        {% include 'core/user-list.html' %}
+<h4 class="mt-2 mb-3">Users</h4>
+<div class="user-list">
+  {% for user in users %}
+    <div class="user d-block mb-2 py-2">
+      <div class="d-flex align-items-center gap-2 justify-content-space-between">
+        <div class="avatar d-flex align-items-center justify-content-center fw-bold text-white">{{user.username|upper|first}}</div>
+        <a class="{% if user.username in request.path %}active{% endif %}" style="text-decoration: none; width:100px" href="{% url 'chat' user %}">
+          <div class="name">{{user}}</div>
+          <div id="last-message" class="message">{{user|last_message:request.user}}</div>
+        </a>
       </div>
-      <div class="col-lg-8 d-flex align-items-center justify-content-center chat px-3">
-        <p>Select a user to chat</p>
+      <!-- Profile section -->
+      <div class="profile-section">
+        <div class="description">{{ user.profile.description }}</div>
+        {% if user.profile.image %}
+          <img src="{{ user.profile.image.url }}" alt="Profile Image" class="profile-image">
+        {% endif %}
       </div>
+      <!-- End of profile section -->
     </div>
-  </div>
+    <div class="separator mb-2"></div>
+  {% endfor %}
 </div>
-
-{% endblock content %}
+<a class="logout" href="{% url 'logout' %}">Logout</a>
