--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,79 @@
+/* Set background color and font styles for the entire page */
+body {
+  background-color: #f8f8f8;
+  font-family: Arial, sans-serif;
+}
+
+/* Apply styles to the user list section */
+.user-list {
+  position: relative;
+  height: 73vh;
+  overflow: auto;
+}
+
+.user-list::-webkit-scrollbar {
+  width: 5px;
+}
+
+.user-list::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.user-list::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.user-list::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.user-list .user {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.user-list .user.active {
+  background-color: #e2e2e2;
+}
+
+.user-list .user .avatar {
+  width: 40px;
+  height: 40px;
+  background-color: #555;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #fff;
+  font-size: 20px;
+}
+
+.user-list .user .name {
+  margin-left: 10px;
+  color: #333;
+  font-weight: bold;
+}
+
+.user-list .user .message {
+  margin-left: 10px;
+  color: #555;
+  font-size: 14px;
+  opacity: 0.8;
+}
+
+.user-list .separator {
+  height: 1px;
+  width: 100%;
+  background-color: #eee;
+}
+
+/* Apply styles to the chat box section */
 .chat-box {
   height: 85vh;
 }
@@ -5,140 +81,116 @@
 .chat-box .chat {
   position: relative;
   background: transparent;
-  height: 85vh;
   background: #eee;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .chat-box .chat .chat-log {
-  overflow-y: scroll;
-  height: 76vh;
+  overflow-y: auto;
   padding: 15px 7px;
-  margin-bottom: 5px;
 }
 
 .chat-box .chat .chat-log::-webkit-scrollbar {
-  width: 0px;
-}
-
-.chat-box .chat .chat-log.scroll::-webkit-scrollbar {
   width: 5px;
 }
 
-.chat-box .chat .chat-log.scroll::-webkit-scrollbar-track {
+.chat-box .chat .chat-log::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
 
-.chat-box .chat .chat-log.scroll::-webkit-scrollbar-thumb {
+.chat-box .chat .chat-log::-webkit-scrollbar-thumb {
   background: #888;
 }
 
-.chat-box .chat .chat-log.scroll::-webkit-scrollbar-thumb:hover {
+.chat-box .chat .chat-log::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
-.chat-box .chat .input-box {}
+.chat-box .chat .input-box {
+  display: flex;
+  align-items: center;
+  background-color: #eee;
+  padding: 10px;
+}
 
 .chat-box .chat .input-box input[type="text"] {
+  flex: 1;
   padding: 10px;
-  width: 85%;
-  border-radius: 0;
-  border: 1px solid #b5b2b2;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 .chat-box .chat .input-box button {
-  background: #FFFFFF;
-  border: 1px solid #b5b2b2;
-  width: 15%;
+  background-color: #3a3a3a;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-
-.chat-box .chat .message .avatar {
-  width: 38px;
-  height: 45px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.chat-box .chat .message.left .avatar {
-  background: blue;
-  color: #FFFFFF;
-}
-
-.chat-box .chat .message.right .avatar {
-  background: green;
-  color: #FFFFFF;
+.chat-box .chat .input-box button:disabled {
+  background-color: #717171e3;
+  cursor: not-allowed;
 }
 
 .chat-box .chat .message {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
   gap: 10px;
+  justify-content: flex-start; /* Added */
 }
 
 .chat-box .chat .message.right {
+  justify-content: flex-start; /* Added */
   flex-direction: row-reverse;
 }
 
-.chat-box .chat .message.right span {
-  background: #000;
-  padding: 10px;
-  color: #FFFFFF;
-  border-radius: 7px;
-}
-
-.chat-box .chat .message.left span {
-  background: #000;
-  padding: 10px;
-  color: #FFFFFF;
-  border-radius: 7px;
-}
-
-.user-list {
-  position: relative;
-  height: 73vh;
-  overflow: scroll;
-}
-
-.user-list::-webkit-scrollbar {
-  width: 0px;
-}
-
-.user-list .user {
-  text-decoration: none;
-}
-
-.user-list .user.active {
-  background: #eee;
-}
-
-.user-list .user .avatar {
-  width: 40px;
-  height: 50px;
-  background: #000;
+.chat-box .chat .message .avatar {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-}
-
-.user-list .user .name {
-  color: #000;
-  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #fff;
   font-size: 16px;
-  font-weight: 450;
 }
 
-.user-list .user .message {
-  color: #000;
+.chat-box .chat .message.right .avatar {
+  background-color: #2ecc71;
+}
+
+.chat-box .chat .message.left .avatar {
+  background-color: #3498db;
+}
+
+.chat-box .chat .message span {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  color: #333;
   font-size: 14px;
-  opacity: .9;
+  max-width: 80%; /* Added */
+  word-wrap: break-word; /* Added */
+  overflow-wrap: break-word; /* Added */
 }
 
-.user-list .separator {
-  height: 1px;
-  width: 100%;
-  background: #eee;
-}
-
+/* Apply styles to the logout link */
 .logout {
   text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  display: block;
+  margin-top: 10px;
+}
+
+.logout:hover {
+  text-decoration: underline;
 }
