--- a/templates/core/user-list.html
+++ b/templates/core/user-list.html
@@ -8,7 +8,7 @@
         <div class="avatar d-flex align-items-center justify-content-center fw-bold text-white">{{user.username|upper|first}}</div>
         <div>
           <span class="name d-block">{{user}}</span>
-          <span id="last-message" class="message d-block">{{user|last_message:request.user}}</span>
+          <span id="last-message" class="message d-block">{{ user|last_message:request.user|truncatechars:15 }}</span>
         </div>
       </div>
     </a>
