--- a/templates/core/user-list.html
+++ b/templates/core/user-list.html
@@ -5,7 +5,7 @@
   {% for user in users %}
     <a class="user d-block mb-2 py-2 {% if user.username in request.path %}active{% endif %}" href="{% url 'chat' user %}">
       <div class="d-flex align-items-center gap-2">
-        <div class="avatar d-flex align-items-center justify-content-center fw-bold text-white">{{user.username|upper|first}}</div>
+        <img id="sender-profile-photo" src="../../media/{{ user.profile.image }}" alt="Sender Profile Photo" style="width: 50px; height: 50px; border-radius: 50%;" />
         <div>
           <span class="name d-block">{{user}}</span>
           <span id="last-message" class="message d-block">{{ user|last_message:request.user|truncatechars:15 }}</span>
