--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,13 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.inner {
+  height: 73vh;
+}
+
 /* Apply styles to the user list section */
 .user-list {
   position: relative;
-  height: 73vh;
   overflow: auto;
 }
 
@@ -75,10 +78,12 @@ body {
 
 /* Apply styles to the chat box section */
 .chat-box {
-  height: 85vh;
+  height: 100%;
 }
 
 .chat-box .chat {
+  height: 100%;
+  overflow: auto;
   position: relative;
   background: transparent;
   background: #eee;
@@ -87,10 +92,26 @@ body {
   justify-content: space-between;
 }
 
+.chat .chat-header {
+  padding: 15px 20px;
+  border-bottom: 2px solid #f4f7f6
+}
+
+.chat .chat-header img {
+  float: left;
+  border-radius: 40px;
+  width: 40px
+}
+
+.chat .chat-header .chat-about {
+  float: left;
+  padding-left: 10px
+}
+
 .chat-box .chat .chat-log {
   overflow-y: auto;
   padding: 15px 7px;
-  height: 72vh;
+  /* height: 73vh; */
 }
 
 .chat-box .chat .chat-log::-webkit-scrollbar {
@@ -185,13 +206,12 @@ body {
 
 /* Apply styles to the logout link */
 .logout {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
   text-decoration: none;
-  color: #333;
+  /* color: #333; */
   font-weight: bold;
   display: block;
   margin-top: 10px;
-}
-
-.logout:hover {
-  text-decoration: underline;
 }
