--- a/templates/core/user-list.html
+++ b/templates/core/user-list.html
@@ -15,4 +15,4 @@
     <div class="separator mb-2"></div>
   {% endfor %}
 </div>
-<a class="logout" href="{% url 'logout' %}">Logout</a>
+<a class="logout btn btn-sm btn-secondary" href="{% url 'logout' %}">Logout</a>
