--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,7 +8,7 @@
       <div class="col-lg-4 ">
         {% include 'core/user-list.html' %}
       </div>
-      <div class="col-lg-8 d-flex align-items-center justify-content-center chat px-3">
+      <div class="col-lg-8 d-flex align-items-center justify-content-center chat px-3" style="height: 76vh;">
         <p>Select a user to chat</p>
       </div>
     </div>
